fastapi-redis/istio-1.29.0/istio-1.20.0/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata: 
  name: default
  namespace: default
spec:
  mtls:
    mode: STRICT
