fastapi-redis/istio-1.29.0/istio-1.20.0/DestinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata: 
  name: python-api
spec: 
  host: python-api
    subsets:
    - name: v1
      labels: 
        version: v2
